--- a/gradle.properties
+++ b/gradle.properties
@@ -2,14 +2,14 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.21.4
-yarn_mappings=1.21.4+build.8
+minecraft_version=1.21.5
+yarn_mappings=1.21.5+build.1
 loader_version=0.16.10
-kotlin_loader_version=1.13.1+kotlin.2.1.10
+kotlin_loader_version=1.13.2+kotlin.2.1.20
 # Mod Properties
-mod_version=1.0-SNAPSHOT
+mod_version=1.1
 maven_group=net.threeDom
 archives_base_name=simple-waypoints
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
-fabric_version=0.116.1+1.21.4
+fabric_version=0.119.6+1.21.5
